--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ __pycache__/
 dist-python/
 .venv/
 venv/
+ENV/
+env/
 
 # PyInstaller
 build/
@@ -33,3 +35,16 @@ Thumbs.db
 # Project specific
 mods.json
 *.log
+
+# Security - DO NOT COMMIT
+.env
+.env.local
+.env.*.local
+*.db
+instance/
+web/instance/*.db
+*.key
+*.pem
+*.crt
+config.json
+secrets.json
