--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -2,5 +2,6 @@ Flask>=3.0.0
 Flask-SQLAlchemy>=3.1.0
 Flask-Login>=0.6.3
 Flask-Bcrypt>=1.0.1
+Flask-Talisman>=1.1.0
 python-dotenv>=1.0.0
 gunicorn>=21.2.0
